# buildingTransformer

./: model.py  pyproject.toml  readme.md
exercises/: Practical_1.ipynb  Practical_2.ipynb  Practical_3.ipynb  Practical_4.ipynb  Practical_5.ipynb  Practical_7.ipynb
experiment/model/: decoder_experiment.py  embedding_experiment.py  encoder_experiment.py  positional_encoding_experiment.py  transformer_experiment.py
experiment/new/: experiment.py  robustness_test.py
experiment/run/: main_experiment.py
experiment/sinusoidal_enc/: plot_sinus_enc.py
src/: dataset.py
src/model/: BPETokenizer_customize.py  attention.py  decoder.py  embedding.py  encoder.py  functional.py  position_wise_FFN.py  positional_encoding.py  tokenizer.py  train_custom_tokenizer.py  transformer.py  word_embedding.py
src/run/: initialize_tokenizer.py  main.py
src/utils/: data_cleaning.py  learning_rate_scheduler.py
tests/: practical_2_test.py  practical_4_test.py  practical_5_encoder_layer_tests.py  practical_5_mha_tests.py  practical_6.py
